@@ -69,12 +69,12 @@ connectionsMenu.text=&Options
 
 forceDownloadMenu.text=&Force Download
 speedLimitMenu.text=Set Download &Limit
-speedLimitMenu.icon=${iconsPath}semaphore.gif
+speedLimitMenu.icon=${iconsPath}globalspeedlimit.gif
 limitSpeed=%s kB/s
 unlimitedSpeed=Unlimited
 labelSpeedUnit.text=kB/s
 
-labelSpeedBtn.icon=${iconsPath}semaphore.gif
+labelSpeedBtn.icon=${iconsPath}globalspeedlimit.gif
 labelSpeedBtn.toolTipText=Enable/Disable global speed limit for all files
 
 globalSpeedLimitAction.Action.text=&Global speed limit
