@@ -69,12 +69,12 @@ connectionsMenu.text=&Opções
 
 forceDownloadMenu.text=&Forçar download
 speedLimitMenu.text=Definir um &limite de banda
-speedLimitMenu.icon=${iconsPath}semaphore.gif
+speedLimitMenu.icon=${iconsPath}globalspeedlimit.gif
 limitSpeed=%s kB/s
 unlimitedSpeed=Ilimitado
 labelSpeedUnit.text=kB/s
 
-labelSpeedBtn.icon=${iconsPath}semaphore.gif
+labelSpeedBtn.icon=${iconsPath}globalspeedlimit.gif
 labelSpeedBtn.toolTipText=Habilita/desabilita o limite de banda global para todos os arquivos
 
 globalSpeedLimitAction.Action.text=Limite de banda &global
