@@ -68,18 +68,18 @@ connectionsMenu.text=&Opțiuni
 
 forceDownloadMenu.text=&Forțează descărcarea
 speedLimitMenu.text=Stabilire &limită de viteză
-speedLimitMenu.icon=${iconsPath}semaphore.gif
+speedLimitMenu.icon=${iconsPath}globalspeedlimit.gif
 limitSpeed=%s kO/s
 unlimitedSpeed=Nelimitată
 labelSpeedUnit.text=kO/s
 
-labelSpeedBtn.icon=${iconsPath}semaphore.gif
+labelSpeedBtn.icon=${iconsPath}globalspeedlimit.gif
 labelSpeedBtn.toolTipText=Activează/dezactivează limita de viteză globală, pentru toate fișierele
 
 speedSlider.toolTipText=Trageți pentru a modifica limita de viteză globală, pentru toate fișierele
 
 globalLimitSpeedAction.Action.text=Limită de viteză globală
-globalLimitSpeedAction.Action.smallIcon=${iconsPath}semaphore.gif
+globalLimitSpeedAction.Action.smallIcon=${iconsPath}globalspeedlimit.gif
 globalLimitSpeedAction.Action.accelerator=F9
 #don't translate
 globalLimitSpeedAction.Action.shortDescription=${labelSpeedBtn.toolTipText}
